# MultiplaneLensing

./: .gitignore  .gitlab-ci.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE  README.md  README.org
example/: CMakeLists.txt  example.cpp  example_cpu.cpp
notebooks/: Benchmark scripts.ipynb  Reference API lens calculations.ipynb
src/: CMakeLists.txt  composite.cpp  composite.cu  composite.h  context.cu  context.h  cpu_context.cpp  cpu_context.h  image.h  lens.h  main.cpp  multiplane.cpp  multiplane.cu  multiplane.h  multiplane_api.cpp  multiplane_api.h  multiplane_cu.cu  multiplane_cu.h  plummer.cpp  plummer.cu  plummer.h  sources.cpp  sources.cu  sources.h
src/util/: arctypes.h  constants.h  cosmology.cu  cosmology.h  error.h  vector2d.cpp  vector2d.h
tests/: CMakeLists.txt  api_tests.cu  composite_tests.cpp  composite_tests.cu  multiplane_tests.cpp  multiplane_tests.cu  plummer_tests.cpp  plummer_tests.cu  sources_tests.cpp  sources_tests.cu  test_betas.txt  test_thetas.txt  testdata.txt  util_tests.cpp  util_tests.cu  vector2d_tests.cpp  vector2d_tests.cu
